<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bixi Toronto</string>
    <string name="title_section2">Map</string>
    <string name="title_section1">List</string>
    <string name="menu_settings">Settings</string>
    <string name="bike_station_data_url">http://bixitodb.appspot.com/remote/getBixiData</string>
    <!-- Original url: https://toronto.bixi.com/data/bikeStations.xml -->
	<string name="station_data_loading_dialog">Bixi Station Data is being loaded</string>
	<string name="loading">Loading</string>
	<string name="station_details_title">Station Details</string>
	<string name="google_maps_missing">You must have Google Maps installed to use this feature.</string>
	<string name="google_maps_install_button">Install</string>
	<string name="refresh_button_text">Refresh</string>
	<string name="search_button_text">Search</string>
	
	<string name="error_loading_list_error">An error has occurred while loading the station list.</string>
	<string name="error_loading_list_okay_button">OK</string>
	
	<string name="error_no_network_connection_error">An active internet connection was not found. Please check your internet connection and try again.</string>
	<string name="error_no_network_connection_okay_button">OK</string>
	
	<!-- Station Details Activity Strings -->
	<string name="station_is_public_label">Public station:</string>
	<string name="station_is_locked_label">Station locked:</string>
	<string name="station_is_temp_label">Station is temporary:</string>
	<string name="station_last_update_label">Last updated:</string>
	
	
	<string name="station_is_public_true">Yes</string>
	<string name="station_is_public_false">No</string>
	<string name="station_is_locked_true">Yes</string>
	<string name="station_is_locked_false">No</string>
	<string name="station_is_temp_true">Yes</string>
	<string name="station_is_temp_false">No</string>
	
	<string name="station_pop_json_url">http://bixito.andrewl.ca/stations/STATION_ID.json</string>
	<string name="station_pop_label">Station popularity:</string>
	<string name="station_pop_loading">Loading...</string>
	<string name="station_pop_error">Error loading station popularity</string>
	<string name="station_pop_low">Low</string>
	
	<string name="get_directions_button_text">Get Directions</string>
	<string name="dismiss_dialog_button_text">Dismiss</string>
		
	<string name="map_view_fragment_tag">map_frag</string>
	<string name="list_view_fragment_tag">list_frag</string>
    
    
</resources>